--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "recharts": "^3.2.1",
     "sweetalert2": "^11.23.0",
     "sweetalert2-react-content": "^5.1.0"
   },
