--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
   "rewrites": [
-    { "source": "/api/v1/(.*)", "destination": "https://54.235.11.180:8080/api/v1/$1" },
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/api/(.*)",
+      "destination": "http://54.235.11.180:8080/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
