--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "http://34.228.43.139:8080/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/"
     }
